test/corpus/type_declarations.txt
==================
Header union
==================

header_union ipv4_ipv6 {
    ipv4_h ipv4;
    ipv6_h ipv6;
}

---

(source_file
  (type_declaration
    (derived_type_declaration
      (header_union_declaration
        (name (nonTypeName (identifier)))
        (struct_field
          (type_ref (type_name (identifier)))
          (name (nonTypeName (identifier))))
        (struct_field
          (type_ref (type_name (identifier)))
          (name (nonTypeName (identifier))))))))

==================
Extern with type parameters
==================

extern Register<T> {
    Register(bit<32> size);
    T read();
    void write(in T value);
}

---

(source_file
  (extern_declaration
    (nonTypeName (identifier))
    (type_parameters
      (type_parameter_list
        (name (nonTypeName (identifier)))))
    (method_prototype
      (identifier)
      (parameter_list
        (non_empty_parameter_list
          (parameter
            (type_ref (base_type (integer_literal)))
            (name (nonTypeName (identifier)))))))
    (method_prototype
      (function_prototype
        (type_or_void
          (type_ref (type_name (identifier))))
        (name (nonTypeName (identifier)))))
    (method_prototype
      (function_prototype
        (type_or_void)
        (name (nonTypeName (identifier)))
        (parameter_list
          (non_empty_parameter_list
            (parameter
              (direction)
              (type_ref (type_name (identifier)))
              (name (nonTypeName (identifier))))))))))

==================
Tuple type
==================

typedef tuple<bit<8>, bit<16>, bit<32>> my_tuple_t;

---

(source_file
  (type_declaration
    (typedef_declaration
      (type_ref
        (tuple_type
          (type_argument_list
            (type_arg (type_ref (base_type (integer_literal))))
            (type_arg (type_ref (base_type (integer_literal))))
            (type_arg (type_ref (base_type (integer_literal)))))))
      (name (nonTypeName (identifier))))))

==================
Serializable enum
==================

enum bit<8> Color_t {
    RED = 0,
    GREEN = 1,
    BLUE = 2
}

---

(source_file
  (type_declaration
    (derived_type_declaration
      (enum_declaration
        (type_ref (base_type (integer_literal)))
        (name (nonTypeName (identifier)))
        (specified_identifier_list
          (specified_identifier
            (name (nonTypeName (identifier)))
            (integer_literal))
          (specified_identifier
            (name (nonTypeName (identifier)))
            (integer_literal))
          (specified_identifier
            (name (nonTypeName (identifier)))
            (integer_literal)))))))

==================
Typedef with annotations
==================

@typedef
typedef bit<48> mac_addr_t;

---

(source_file
  (type_declaration
    (typedef_declaration
      (annotations (annotation (name (nonTypeName (identifier)))))
      (type_ref (base_type (integer_literal)))
      (name (nonTypeName (identifier))))))
